vlib/v/checker/tests/return_duplicate_with_none_err_b.vv
fn f() ?bool {
	return none
	return true
}
fn main() {
	f() or {
		println('fail')
	}
}
